Fix spacing within asides and aside-alikes

--- a/scss/modules/_placeholders.scss
+++ b/scss/modules/_placeholders.scss
@@ -203,8 +203,12 @@
   margin: 1.618em -1.618em;
   padding: 1.618em;
 
-  h1, h2, h3, h4, h5 {
+  & > *:first-child {
     margin-top: 0;
+  }
+
+  & > *:last-child {
+    margin-bottom: 0;
   }
 
   @media (min-width: 50em) {
